/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package hessian2_extend;

option go_package = "dubbo.apache.org/dubbo-go/v3/proto/hessian2_extend;hessian2_extend";

import "google/protobuf/descriptor.proto";

message Hessian2MessageOptions {
  string java_class_name = 1;
  string reference_path = 2;
  bool is_inheritance = 3;
  bool extend_args = 4;
}

extend google.protobuf.MessageOptions {
  optional Hessian2MessageOptions message_extend = 12345;
}

message Hessian2MethodOptions {
  string method_name = 1;
}

extend google.protobuf.MethodOptions {
  optional Hessian2MethodOptions method_extend = 12345;
}

message Hessian2ServiceOptions {
  string interface_name = 1;
}

extend google.protobuf.ServiceOptions {
  optional Hessian2ServiceOptions service_extend = 12345;
}

message Hessian2EnumOptions {
  string java_class_name = 1;
}

extend google.protobuf.EnumOptions {
  optional Hessian2EnumOptions enum_extend = 12345;
}