/*
 * Tripleæ³›åŒ–è°ƒç”¨ç½‘å…³ç¤ºä¾‹
 * æ¼”ç¤ºå¦‚ä½•åœ¨ç½‘å…³ä¸­å¤„ç†HTTP/JSONåˆ°Triple/Protobufçš„è½¬æ¢
 */

package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"net/http"
	"strconv"
	"strings"
)

import (
	"dubbo.apache.org/dubbo-go/v3/protocol/triple"
)

// ç½‘å…³ç»“æ„
type TripleGateway struct {
	services map[string]*triple.TripleGenericService
	schemas  map[string]*ServiceSchema
}

// æœåŠ¡Schemaå®šä¹‰
type ServiceSchema struct {
	ServiceName string
	Methods     map[string]*MethodSchema
}

type MethodSchema struct {
	MethodName     string
	RequestType    string
	ResponseType   string
	ParameterTypes []string
}

func main() {
	fmt.Println("ğŸš€ Tripleæ³›åŒ–è°ƒç”¨ç½‘å…³æ¼”ç¤º")
	fmt.Println("=============================")

	// åˆ›å»ºç½‘å…³å®ä¾‹
	gateway := NewTripleGateway()

	// æ³¨å†Œåç«¯æœåŠ¡
	gateway.RegisterService("UserService", "tri://user-service:20000/com.example.UserService")
	gateway.RegisterService("OrderService", "tri://order-service:20001/com.example.OrderService")

	// åˆå§‹åŒ–æœåŠ¡Schema (æ¨¡æ‹Ÿé…ç½®)
	gateway.InitializeSchemas()

	// è®¾ç½®HTTPè·¯ç”±
	http.HandleFunc("/api/v1/", gateway.HandleHTTPRequest)
	http.HandleFunc("/health", gateway.HealthCheck)

	fmt.Println("ç½‘å…³å·²å¯åŠ¨åœ¨ç«¯å£ :8080")
	fmt.Println("ç¤ºä¾‹è¯·æ±‚:")
	fmt.Println("  POST /api/v1/UserService/createUser")
	fmt.Println("  POST /api/v1/UserService/getUserById")
	fmt.Println("  POST /api/v1/OrderService/createOrder")

	log.Fatal(http.ListenAndServe(":8080", nil))
}

// åˆ›å»ºç½‘å…³å®ä¾‹
func NewTripleGateway() *TripleGateway {
	return &TripleGateway{
		services: make(map[string]*triple.TripleGenericService),
		schemas:  make(map[string]*ServiceSchema),
	}
}

// æ³¨å†ŒæœåŠ¡
func (gw *TripleGateway) RegisterService(serviceName, serviceURL string) {
	tripleService := triple.NewTripleGenericService(serviceURL)
	gw.services[serviceName] = tripleService
	log.Printf("æ³¨å†ŒæœåŠ¡: %s -> %s", serviceName, serviceURL)
}

// åˆå§‹åŒ–æœåŠ¡Schema (æ¨¡æ‹Ÿé…ç½®)
func (gw *TripleGateway) InitializeSchemas() {
	// UserService Schema
	userServiceSchema := &ServiceSchema{
		ServiceName: "UserService",
		Methods: map[string]*MethodSchema{
			"createUser": {
				MethodName:     "createUser",
				RequestType:    "com.example.CreateUserRequest",
				ResponseType:   "com.example.CreateUserResponse",
				ParameterTypes: []string{"com.example.User"},
			},
			"getUserById": {
				MethodName:     "getUserById",
				RequestType:    "com.example.GetUserRequest",
				ResponseType:   "com.example.User",
				ParameterTypes: []string{"int64"},
			},
			"updateUser": {
				MethodName:     "updateUser",
				RequestType:    "com.example.UpdateUserRequest",
				ResponseType:   "com.example.UpdateUserResponse",
				ParameterTypes: []string{"int64", "com.example.User"},
			},
		},
	}

	// OrderService Schema
	orderServiceSchema := &ServiceSchema{
		ServiceName: "OrderService",
		Methods: map[string]*MethodSchema{
			"createOrder": {
				MethodName:     "createOrder",
				RequestType:    "com.example.CreateOrderRequest",
				ResponseType:   "com.example.CreateOrderResponse",
				ParameterTypes: []string{"com.example.Order"},
			},
			"getOrder": {
				MethodName:     "getOrder",
				RequestType:    "com.example.GetOrderRequest",
				ResponseType:   "com.example.Order",
				ParameterTypes: []string{"string"},
			},
		},
	}

	gw.schemas["UserService"] = userServiceSchema
	gw.schemas["OrderService"] = orderServiceSchema

	log.Printf("åˆå§‹åŒ–Schema: UserService (%d methods), OrderService (%d methods)",
		len(userServiceSchema.Methods), len(orderServiceSchema.Methods))
}

// HTTPè¯·æ±‚å¤„ç†
func (gw *TripleGateway) HandleHTTPRequest(w http.ResponseWriter, r *http.Request) {
	// è®¾ç½®CORS headers
	w.Header().Set("Access-Control-Allow-Origin", "*")
	w.Header().Set("Access-Control-Allow-Methods", "POST, GET, OPTIONS")
	w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")

	if r.Method == "OPTIONS" {
		w.WriteHeader(http.StatusOK)
		return
	}

	log.Printf("æ”¶åˆ°è¯·æ±‚: %s %s", r.Method, r.URL.Path)

	ctx := context.Background()

	// 1. è§£æè¯·æ±‚è·¯å¾„
	serviceName, methodName, err := gw.parseRequestPath(r.URL.Path)
	if err != nil {
		gw.writeErrorResponse(w, http.StatusBadRequest, "Invalid request path: "+err.Error())
		return
	}

	log.Printf("è§£æè·¯å¾„: service=%s, method=%s", serviceName, methodName)

	// 2. éªŒè¯æœåŠ¡å’Œæ–¹æ³•æ˜¯å¦å­˜åœ¨
	schema, exists := gw.schemas[serviceName]
	if !exists {
		gw.writeErrorResponse(w, http.StatusNotFound, "Service not found: "+serviceName)
		return
	}

	methodSchema, exists := schema.Methods[methodName]
	if !exists {
		gw.writeErrorResponse(w, http.StatusNotFound, "Method not found: "+methodName)
		return
	}

	// 3. è§£æè¯·æ±‚ä½“
	var requestData map[string]any
	if r.Body != nil {
		if err := json.NewDecoder(r.Body).Decode(&requestData); err != nil {
			// å¦‚æœJSONè§£æå¤±è´¥ï¼Œå°è¯•ä½œä¸ºç©ºè¯·æ±‚å¤„ç†
			requestData = make(map[string]any)
		}
	} else {
		requestData = make(map[string]any)
	}

	log.Printf("è¯·æ±‚æ•°æ®: %+v", requestData)

	// 4. è½¬æ¢å‚æ•°
	tripleArgs, err := gw.convertJSONToTripleArgs(requestData, methodSchema)
	if err != nil {
		gw.writeErrorResponse(w, http.StatusBadRequest, "Parameter conversion error: "+err.Error())
		return
	}

	log.Printf("è½¬æ¢å‚æ•°: types=%v, args=%+v", methodSchema.ParameterTypes, tripleArgs)

	// 5. æ„å»ºé™„ä»¶
	attachments := gw.buildAttachments(r)

	// 6. æ‰§è¡ŒTripleæ³›åŒ–è°ƒç”¨
	tripleService := gw.services[serviceName]
	result, err := tripleService.InvokeWithAttachments(ctx, methodName,
		methodSchema.ParameterTypes, tripleArgs, attachments)

	if err != nil {
		log.Printf("æœåŠ¡è°ƒç”¨å¤±è´¥: %v", err)
		gw.writeErrorResponse(w, http.StatusInternalServerError, "Service call error: "+err.Error())
		return
	}

	log.Printf("æœåŠ¡è°ƒç”¨æˆåŠŸ: %+v", result)

	// 7. è½¬æ¢å“åº”
	jsonResult := gw.convertTripleResultToJSON(result, methodSchema.ResponseType)

	// 8. è¿”å›å“åº”
	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(http.StatusOK)
	json.NewEncoder(w).Encode(map[string]any{
		"success": true,
		"data":    jsonResult,
	})
}

// è§£æè¯·æ±‚è·¯å¾„
func (gw *TripleGateway) parseRequestPath(path string) (serviceName, methodName string, err error) {
	// è·¯å¾„æ ¼å¼: /api/v1/{serviceName}/{methodName}
	// ä¾‹å¦‚: /api/v1/UserService/getUserById

	parts := strings.Split(strings.Trim(path, "/"), "/")
	if len(parts) < 4 {
		return "", "", fmt.Errorf("invalid path format, expected /api/v1/{service}/{method}")
	}

	if parts[0] != "api" || parts[1] != "v1" {
		return "", "", fmt.Errorf("invalid API version, expected /api/v1/...")
	}

	serviceName = parts[2]
	methodName = parts[3]

	return serviceName, methodName, nil
}

// JSONåˆ°Tripleå‚æ•°è½¬æ¢
func (gw *TripleGateway) convertJSONToTripleArgs(jsonData map[string]any, methodSchema *MethodSchema) ([]any, error) {
	paramTypes := methodSchema.ParameterTypes

	if len(paramTypes) == 0 {
		// æ— å‚æ•°æ–¹æ³•
		return []any{}, nil
	}

	if len(paramTypes) == 1 {
		// å•å‚æ•°å¤„ç†
		paramType := paramTypes[0]

		// å¦‚æœæ˜¯åŸºç¡€ç±»å‹ï¼Œä»JSONä¸­æå–å€¼
		if gw.isBasicType(paramType) {
			if value, exists := jsonData["value"]; exists {
				convertedValue, err := gw.convertValueByType(value, paramType)
				if err != nil {
					return nil, fmt.Errorf("failed to convert value: %w", err)
				}
				return []any{convertedValue}, nil
			} else {
				return nil, fmt.Errorf("missing 'value' field for basic type %s", paramType)
			}
		} else {
			// å¤æ‚ç±»å‹ï¼šç›´æ¥ä½¿ç”¨æ•´ä¸ªJSONä½œä¸ºå‚æ•°
			return []any{jsonData}, nil
		}
	}

	// å¤šå‚æ•°å¤„ç†
	args := make([]any, len(paramTypes))
	for i, paramType := range paramTypes {
		paramKey := fmt.Sprintf("param%d", i)
		if value, exists := jsonData[paramKey]; exists {
			convertedValue, err := gw.convertValueByType(value, paramType)
			if err != nil {
				return nil, fmt.Errorf("failed to convert parameter %d: %w", i, err)
			}
			args[i] = convertedValue
		} else {
			return nil, fmt.Errorf("missing parameter %s", paramKey)
		}
	}

	return args, nil
}

// åˆ¤æ–­æ˜¯å¦ä¸ºåŸºç¡€ç±»å‹
func (gw *TripleGateway) isBasicType(typeName string) bool {
	basicTypes := []string{"string", "int32", "int64", "float32", "float64", "bool", "bytes"}
	for _, basicType := range basicTypes {
		if typeName == basicType {
			return true
		}
	}
	return false
}

// ç±»å‹è½¬æ¢
func (gw *TripleGateway) convertValueByType(value any, targetType string) (any, error) {
	switch targetType {
	case "string":
		if str, ok := value.(string); ok {
			return str, nil
		}
		return fmt.Sprintf("%v", value), nil

	case "int32":
		switch v := value.(type) {
		case float64:
			return int32(v), nil
		case int:
			return int32(v), nil
		case string:
			if i, err := strconv.ParseInt(v, 10, 32); err == nil {
				return int32(i), nil
			}
		}
		return nil, fmt.Errorf("cannot convert %T to int32", value)

	case "int64":
		switch v := value.(type) {
		case float64:
			return int64(v), nil
		case int:
			return int64(v), nil
		case string:
			if i, err := strconv.ParseInt(v, 10, 64); err == nil {
				return i, nil
			}
		}
		return nil, fmt.Errorf("cannot convert %T to int64", value)

	case "float64":
		switch v := value.(type) {
		case float64:
			return v, nil
		case int:
			return float64(v), nil
		case string:
			if f, err := strconv.ParseFloat(v, 64); err == nil {
				return f, nil
			}
		}
		return nil, fmt.Errorf("cannot convert %T to float64", value)

	case "bool":
		if b, ok := value.(bool); ok {
			return b, nil
		}
		return nil, fmt.Errorf("cannot convert %T to bool", value)

	default:
		// å¤æ‚ç±»å‹ç›´æ¥è¿”å›
		return value, nil
	}
}

// æ„å»ºè¯·æ±‚é™„ä»¶
func (gw *TripleGateway) buildAttachments(r *http.Request) map[string]any {
	attachments := make(map[string]any)

	// ä¼ é€’HTTP headers
	if auth := r.Header.Get("Authorization"); auth != "" {
		attachments["authorization"] = auth
	}

	if userAgent := r.Header.Get("User-Agent"); userAgent != "" {
		attachments["user-agent"] = userAgent
	}

	if requestID := r.Header.Get("X-Request-ID"); requestID != "" {
		attachments["request-id"] = requestID
	}

	// æ·»åŠ ç½‘å…³ä¿¡æ¯
	attachments["gateway-version"] = "v1.0.0"
	attachments["gateway-type"] = "triple-gateway"

	// æ·»åŠ å®¢æˆ·ç«¯ä¿¡æ¯
	if clientIP := gw.getClientIP(r); clientIP != "" {
		attachments["client-ip"] = clientIP
	}

	return attachments
}

// è·å–å®¢æˆ·ç«¯IP
func (gw *TripleGateway) getClientIP(r *http.Request) string {
	// æ£€æŸ¥X-Forwarded-For header
	if xff := r.Header.Get("X-Forwarded-For"); xff != "" {
		return strings.Split(xff, ",")[0]
	}

	// æ£€æŸ¥X-Real-IP header
	if xri := r.Header.Get("X-Real-IP"); xri != "" {
		return xri
	}

	// ä½¿ç”¨è¿œç¨‹åœ°å€
	parts := strings.Split(r.RemoteAddr, ":")
	if len(parts) > 0 {
		return parts[0]
	}

	return "unknown"
}

// Tripleç»“æœåˆ°JSONè½¬æ¢
func (gw *TripleGateway) convertTripleResultToJSON(result any, responseType string) any {
	// ç®€å•å®ç°ï¼šç›´æ¥è¿”å›ç»“æœ
	// åœ¨å®é™…åº”ç”¨ä¸­ï¼Œè¿™é‡Œå¯ä»¥æ·»åŠ æ›´å¤æ‚çš„Protobufåˆ°JSONè½¬æ¢é€»è¾‘

	if result == nil {
		return map[string]any{"message": "success"}
	}

	// å¦‚æœç»“æœå·²ç»æ˜¯mapç±»å‹ï¼Œç›´æ¥è¿”å›
	if resultMap, ok := result.(map[string]any); ok {
		return resultMap
	}

	// å¦åˆ™åŒ…è£…è¿”å›
	return map[string]any{
		"result": result,
		"type":   responseType,
	}
}

// å†™å…¥é”™è¯¯å“åº”
func (gw *TripleGateway) writeErrorResponse(w http.ResponseWriter, statusCode int, message string) {
	log.Printf("é”™è¯¯å“åº”: %d - %s", statusCode, message)

	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(statusCode)
	json.NewEncoder(w).Encode(map[string]any{
		"success": false,
		"error":   message,
		"code":    statusCode,
	})
}

// å¥åº·æ£€æŸ¥
func (gw *TripleGateway) HealthCheck(w http.ResponseWriter, r *http.Request) {
	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(http.StatusOK)
	json.NewEncoder(w).Encode(map[string]any{
		"status":   "healthy",
		"services": len(gw.services),
		"schemas":  len(gw.schemas),
	})
}
